Adicionando Authorize as controllers

--- a/DevFreela.API/appsettings.Development.json
+++ b/DevFreela.API/appsettings.Development.json
@@ -10,7 +10,7 @@
     "DevFreelaCs": "Server=localhost;Database=DevFreela;Trusted_Connection=True;"
   },
   "Jwt": {
-    "Key": "Está é minha senha secreta para proteger meus tokens",
+    "Key": "Esta e minha senha secreta para proteger meus tokens",
     "Issuer": "DevFreela",
     "Audience": "ClientFreelancers"
   }
